# home-assignment-tunesec2

./: .gitignore  README.md  env.example  examples.json  pyproject.toml  pytest.ini  requirements.txt  run.py  setup.bat  setup.sh
outputs/: Base44_Payoneer_20251101_185354.json  Goshgoha_Wiz_20251101_185400.json  Langflow_NVIDIA_20251101_185341.json  Okta_Workforce_Identity_Citi_Bank_20251101_185332.json  README.md  Tiles_Shopify_20251101_185348.json  example_approve.json  example_decline.json
risk_assessment/: __init__.py  criticality_assessment.py  cve_client.py  decision_policy.py  main.py  models.py  multi_agent.py  rag_cve.py  structured_outputs.py  utils.py  vulnerability_assessment.py  workflow.py
scripts/: generate_viz.py  visualize_traces.py
tests/: __init__.py  test_cve_client.py  test_decision_policy.py  test_models.py
viz/: workflow_ascii.txt  workflow_diagram.md
viz/traces/: Base44_Payoneer_trace.md  Goshgoha_Wiz_trace.md  Langflow_NVIDIA_trace.md  Okta_Workforce_Identity_Citi_Bank_trace.md  Tiles_Shopify_trace.md
